2006-02-09    <tino@firebird.03.softkill.net>

	* socklinger.c (socklinger): close socket on forked connection

2006-01-25    <tino@firebird.03.softkill.net>

	* socklinger.c (socklinger_accept): HUP control added

2006-01-24    <tino@firebird.03.softkill.net>

	* socklinger.c (socklinger_accept): If SYN/RST was found or
	something similar weird happened, then accept returns "broken
	pipe" and socklinger got an error.  Now the process relaxes a
	little bit and retries.
	(socklinger): whoopsie, errno was checked even if there was no
	error ..

2005-10-30    <tino@firebird.03.softkill.net>

	* socklinger.c (socklinger): improved output to screen

	* example/streamgrab.sh: added

	* example/tester.sh: improved to give more info

2005-03-15    <tino@firebird.03.softkill.net>

	* socklinger.c (socklinger): fo now specially treated if fo!=fi

2004-08-16  U-KOSH\Administrator  <Administrator@KOSH>

	* socklinger.c (socklinger_accept, main): prefix "count@" for
	number of parallel connections implemented.  It looks like it is
	preforking, but the script isn't preforking at all.  Socklinger
	terminates as soon as any child comes back, but the running childs
	are not terminated yet by force.